made some endpoints
